src/err.txt
Map.h:96:13: error: Mismatching allocation and deallocation: Map::Tiles [mismatchAllocDealloc]
            delete Tiles;
            ^
